language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_whole_declaration_of_bit_array.snap
---
source: language-server/src/tests/action.rs
expression: "import gleam/io\n\nconst n = 24\n\npub fn main() {\n  let bits = <<8080:size(n)>>\n  bits\n}"
---
----- BEFORE ACTION
import gleam/io

const n = 24

pub fn main() {
  let bits = <<8080:size(n)>>
  ▔▔▔▔▔▔▔↑                   
  bits
}


----- AFTER ACTION
import gleam/io

const n = 24

const bits = <<8080:size(n)>>

pub fn main() {
  bits
}
