language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_whole_declaration_of_string.snap
---
source: language-server/src/tests/action.rs
expression: "import gleam/io\n\npub fn main() {\n  let c = \"constant\"\n  io.debug(c)\n}"
---
----- BEFORE ACTION
import gleam/io

pub fn main() {
  let c = "constant"
  ▔▔▔▔↑             
  io.debug(c)
}


----- AFTER ACTION
import gleam/io

const c = "constant"

pub fn main() {
  io.debug(c)
}
