language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_whole_declaration_of_tuple.snap
---
source: language-server/src/tests/action.rs
expression: "import gleam/io\n\npub fn main() {\n  let c = #(\"one\", \"two\", \"three\")\n  io.debug(c)\n}"
---
----- BEFORE ACTION
import gleam/io

pub fn main() {
  let c = #("one", "two", "three")
  ▔▔▔▔↑                           
  io.debug(c)
}


----- AFTER ACTION
import gleam/io

const c = #("one", "two", "three")

pub fn main() {
  io.debug(c)
}
