language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_in_correct_position_1.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn first() {\n    1\n}\n\nfn second() {\n    2\n}\n\nfn third() {\n    3\n}\n"
---
----- BEFORE ACTION

fn first() {
    1
    ↑
}

fn second() {
    2
}

fn third() {
    3
}


----- AFTER ACTION

const int = 1

fn first() {
    int
}

fn second() {
    2
}

fn third() {
    3
}
