language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_final_steps_of_pipeline.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  True\n  |> wibble\n  |> wobble\n}\n\nfn wibble(_) { 1 }\nfn wobble(_) { 1.0 }\n"
---
----- BEFORE ACTION

pub fn main() {
  True
  |> wibble
     ▔▔▔▔▔▔
  |> wobble
▔▔▔▔▔↑     
}

fn wibble(_) { 1 }
fn wobble(_) { 1.0 }


----- AFTER ACTION

pub fn main() {
  True
  |> function
}

fn function(bool: Bool) -> Float {
  bool
  |> wibble
  |> wobble
}

fn wibble(_) { 1 }
fn wobble(_) { 1.0 }
